_sass/custom.scss
/*- Custom style -*/

// don't add margin to bottom of nested lists
li > ul {
  margin-bottom: 0px;
}

// indent and set backgound on code blocks
.highlight {
  margin-left: 10px;
  background-color: #f2f2f2;
  pre {
    padding-left: 25px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
  code {
    background-color: #f2f2f2;
  }
}

h2, h3, h4, h5 {
  color: #008A3C;
}

